<?xml version="1.0"?>
<package format="2">
    <name>line_passage_obstacle</name>
    <version>0.1.0</version>
    <description>ATF app for testing navigation.</description>

    <maintainer email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</maintainer>

    <author email="florian.weisshardt@ipa.fraunhofer.de">Florian Weisshardt</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>atf_core</depend>
    <depend>roslaunch</depend>
    <depend>rospy</depend>
    <depend>rostopic</depend>

    <depend>cob_command_tools</depend>
    <depend>cob_common</depend>
    <depend>cob_environments</depend>
    <depend>cob_navigation</depend>
    <depend>cob_robots</depend>
    <depend>cob_simulation</depend>
    <depend>cob_supported_robots</depend>
    
    <test_depend>rostest</test_depend>

</package>
